# telert

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  DEMO.md  DISCORD.md  Dockerfile  ENDPOINT.md  LICENSE  RAILWAY.md  README-with-GIF.md  README.es.md  README.hi.md  README.md  README.zh-CN.md  RECORDING.md  RELEASE_INSTRUCTIONS.md  RELEASE_NOTES.md  SIMPLE_RECORDING.md  TEAMS.md  TODO.md  VSCODE_EXT_FUNC.md  demo-script.sh  demo-simulation.sh  demo.cast  docker-compose.yml  pyproject.toml  telert-demo.cast  telert-wrapper.sh  terminalizer-config.yml
.github/: FUNDING.yml  dependabot.yml
.github/actions/run/: README.md  action.yml  circleci-orb.yml  gitlab-ci-template.yml
.github/actions/telert-action/: action.yml
.github/workflows/: build.yml  example.yml  publish-docker-vscode.yml  publish.yml
docs/: CI-CD.md  COMPLETIONS.md  DOCKER.md  EMAIL.md  ENVIRONMENT_VARIABLES.md  MESSAGE_FORMATTING.md  MONITORING.md  PUSHOVER.md  PYTHON_API.md  RAILWAY.md  TELEGRAM.md  USE_CASES.md
packaging/completions/: install-completions.sh  telert.bash  telert.fish  telert.zsh
packaging/deb/: control
packaging/docker/: entrypoint.sh  server.py
packaging/docker/static/: index.html
telert/: __init__.py  api.py  cli.py  messaging.py
vscode-telert/: .vscodeignore  README.md  extension.js  package-lock.json  package.json
