[project]
name = "telert"
version = "0.1.0"
description = "CLI Telegram notifier: run commands or use as pipeline"
authors = [{name = "Mihir Khandekar", email = "mihirkhandekar@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["requests>=2.25"]

[project.scripts]
telert = "telert.cli:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"